Add httpclient get todoitems and display

--- a/ang-test/src/app/components/header/header.component.html
+++ b/ang-test/src/app/components/header/header.component.html
@@ -1,5 +1,8 @@
 <div class="header-container">
-    <div class="header-title">
-        {{headerTitle()}}
+    <div class="header-title" routerLink="/">
+        {{ headerTitle() }}
+    </div>
+    <div class="header-todo-button" routerLink="/todos">
+        To-Do
     </div>
 </div>
