--- a/ang-test/src/app/components/header/header.component.scss
+++ b/ang-test/src/app/components/header/header.component.scss
@@ -3,4 +3,16 @@
     font-size: 3rem;
     color: white;
     padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    user-select: none;
+    cursor: pointer;
+
+    .header-title:hover {
+        color: aquamarine;
+    }
+
+    .header-todo-button:hover {
+        color: aquamarine;
+    }
 }
