--- a/ang-test/src/app/pages/todos/todos.component.scss
+++ b/ang-test/src/app/pages/todos/todos.component.scss
@@ -4,4 +4,16 @@
     gap: 1rem;
     align-items: center;
     padding-top: 2rem;
+
+    .search-todos-container {
+        font-size: 2rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        input[type="text"] {
+            font-size: 2rem;
+            margin-bottom: 4rem;
+        }
+    }
 }
